--- a/package.json
+++ b/package.json
@@ -1,17 +1,29 @@
 {
-  "name": "normalizr",
-  "version": "3.3.0",
+  "name": "buyconormalizr",
+  "version": "3.4.0",
   "description": "Normalizes and denormalizes JSON according to schema for Redux and Flux applications",
   "bugs": {
-    "url": "https://github.com/paularmstrong/normalizr/issues"
+    "url": "https://github.com/buyco/normalizr/issues"
   },
-  "homepage": "https://github.com/paularmstrong/normalizr",
+  "homepage": "https://github.com/buyco/normalizr",
   "repository": {
-    "url": "https://github.com/paularmstrong/normalizr.git",
+    "url": "https://github.com/buyco/normalizr.git",
     "type": "git"
   },
-  "keywords": ["flux", "redux", "normalize", "denormalize", "api", "json"],
-  "files": ["dist/", "index.d.ts", "LICENSE", "README.md"],
+  "keywords": [
+    "flux",
+    "redux",
+    "normalize",
+    "denormalize",
+    "api",
+    "json"
+  ],
+  "files": [
+    "dist/",
+    "index.d.ts",
+    "LICENSE",
+    "README.md"
+  ],
   "main": "dist/normalizr.js",
   "module": "dist/normalizr.es.js",
   "typings": "index.d.ts",
@@ -32,7 +44,9 @@
     "test:coverage": "npm run test -- --coverage && cat ./coverage/lcov.info | coveralls"
   },
   "author": "Paul Armstrong",
-  "contributors": ["Dan Abramov"],
+  "contributors": [
+    "Dan Abramov"
+  ],
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -64,8 +78,14 @@
   },
   "dependencies": {},
   "lint-staged": {
-    "src/**/*.js": ["test", "git add"],
-    "*.{js,json,css,md}": ["prettier --write", "git add"]
+    "src/**/*.js": [
+      "test",
+      "git add"
+    ],
+    "*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "": {
     "normalizr": "https://github.com/buyco/normalizr.git"
