--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buyconormalizr",
-  "version": "3.4.0",
+  "version": "3.4.1",
   "description": "Normalizes and denormalizes JSON according to schema for Redux and Flux applications",
   "bugs": {
     "url": "https://github.com/buyco/normalizr/issues"
@@ -10,20 +10,8 @@
     "url": "https://github.com/buyco/normalizr.git",
     "type": "git"
   },
-  "keywords": [
-    "flux",
-    "redux",
-    "normalize",
-    "denormalize",
-    "api",
-    "json"
-  ],
-  "files": [
-    "dist/",
-    "index.d.ts",
-    "LICENSE",
-    "README.md"
-  ],
+  "keywords": ["flux", "redux", "normalize", "denormalize", "api", "json"],
+  "files": ["dist/", "index.d.ts", "LICENSE", "README.md"],
   "main": "dist/normalizr.js",
   "module": "dist/normalizr.es.js",
   "typings": "index.d.ts",
@@ -44,9 +32,7 @@
     "test:coverage": "npm run test -- --coverage && cat ./coverage/lcov.info | coveralls"
   },
   "author": "Paul Armstrong",
-  "contributors": [
-    "Dan Abramov"
-  ],
+  "contributors": ["Dan Abramov"],
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -78,14 +64,8 @@
   },
   "dependencies": {},
   "lint-staged": {
-    "src/**/*.js": [
-      "test",
-      "git add"
-    ],
-    "*.{js,json,css,md}": [
-      "prettier --write",
-      "git add"
-    ]
+    "src/**/*.js": ["test", "git add"],
+    "*.{js,json,css,md}": ["prettier --write", "git add"]
   },
   "": {
     "normalizr": "https://github.com/buyco/normalizr.git"
